--- a/index.html
+++ b/index.html
@@ -4,13 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel='stylesheet' href="./style.css">
+<!--    <link rel='stylesheet' href="./style.css">-->
 </head>
 <body>
     <h1 class="title">List of Users</h1>
     <div class="list" >
     </div>
     <p class="time"></p>
+
+    <input type="text" id="input1">
+    <input type="text" id="input2">
+    <p id="result"></p>
+    <button onclick="calculateSum()">Посчитать сумму</button>
+
+    <p></p>
+    <input type="text" id="input3">
+    <p id="result3"></p>
+    <button onclick="calculateQuarty()">Квадрат числа</button>
+
+
 </body>
 <script src="./work.js"></script>
 </html>
