--- a/index.html
+++ b/index.html
@@ -22,7 +22,41 @@
     <p id="result3"></p>
     <button onclick="calculateQuarty()">Квадрат числа</button>
 
+    <p></p>
+    <button class="adc" onclick="calculateQuarty1()">2</button>
+    <p id="result4"></p>
 
+    <p>уровень 6.1</p>
+    <button class="on_ul" onclick="Ulfunction()">Кнопка-заполнить список</button>
+    <ul id="listik1">
+        <li></li>
+    </ul>
+    <button class="on_ul" onclick="Ulfunction1()">от 1 до 10</button>
+    <ul id="listik2">
+        <li></li>
+    </ul>
+    <button class="on_ul" onclick="Ulfunction2()">!</button>
+    <ul id="listik3">
+        <li></li>
+    </ul>
+    <button class="on_ul" onclick="Ulfunction3()">Порядковый</button>
+    <ul id="listik4">
+        <li></li>
+    </ul>
+    <button class="on_ul" onclick="Ulfunction4()">Удалить</button>
+    <ul id="listik5">
+        <li>efffsd</li>
+    </ul>
+    <button class="on_ul" onclick="Ulfunction5()">Удалить случайный</button>
+    <ul id="listik6">
+        <li>efffsd</li>
+        <li>3r2</li>
+        <li>vf</li>
+    </ul>
+    <button class="on_ul" onclick="Ulfunction6()">Удалить случайный</button>
+    <ul id="listik7">
+        <li ></li>
+    </ul>
 </body>
 <script src="./work.js"></script>
 </html>
